--- a/TextEditorUnitTests/EditorUnitTests.csproj
+++ b/TextEditorUnitTests/EditorUnitTests.csproj
@@ -24,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TextEditor\Editor.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
